--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@
   </main> 
     <button class="button"><img src="./images/icon-dice.svg" alt=""></button>
 </body>
- <script src="/main.js"></script>
+ <script src="main.js"></script>
 </html>
