--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <span class="id__text">Advice #</span><span class="id__number"></span>
     </section>
     <section class="advice">
-      <h1 class="advice__text"></h1>
+      <h1 class="advice__text">loading...</h1>
     </section>
     <section class="img">
       <img class="img-mobile" src="./images/pattern-divider-mobile.svg" alt="">
